# PCz_Rover_Control_Panel_2023

./: CMakeLists.txt  GPSList.cpp  Navigate.cpp  README.md  arm.cpp  arm.h  connection.cpp  connection.h  drive.cpp  drive.h  joystickdirectinput.cpp  joystickdirectinput.h  joystickwidget.cpp  joystickwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mapmodule.cpp  mapmodule.h  rover_pointer.cpp  rover_pointer.h  science.cpp  science.h  structures.h
images/: Cross.xcf  arrow.xcf  point.xcf
images/idk/: Untitled.xcf
